--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ p{
 .sub-section{
     display: flex; 
     flex-direction: space-between;
-    padding: 40px;
+    padding: 80px;
 }
 
 .information {
@@ -122,9 +122,33 @@ h2{
 
 .sub-section p{
     font-size: 30px;
+    display: flex;
+    justify-content: space-around;
 }
 
+.alternative-sub-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .illustration img{
     width: 300px;
+}
+
+.project-card{
+    width: 300px;
+    height: 500px;
+    border: 1px solid;
+}
+
+.project-container{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+footer{
+    background: black;
+    height: 200px;
 }
