--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 section {
@@ -130,16 +131,24 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 600px;
 }
 
 .illustration img{
-    width: 300px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .project-card{
     width: 300px;
-    height: 500px;
-    border: 1px solid;
+    height: 400px;
+    border-bottom: 1px solid coral;
+    box-shadow: 5px 5px 20px grey;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
 }
 
 .project-container{
@@ -151,4 +160,16 @@ h2{
 footer{
     background: black;
     height: 200px;
+}
+
+.project-card p,a {
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.project-card img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
 }
