--- a/style.css
+++ b/style.css
@@ -101,7 +101,24 @@ p{
     display: flex; 
     flex-direction: space-between;
     padding: 80px;
+    background: rgba(0,0,0,0);
+    position: relative;
 }
+
+.sub-section::before {
+    content: "";
+    display: block;
+    background: url(images/saut.jpg);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    position: absolute;
+    background-size: cover;
+    background-position-y: -350px;
+    z-index: -1;   
+  }
 
 .information {
     width: 60%;
@@ -113,6 +130,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    background: transparent;
     
 }
 
@@ -132,12 +150,28 @@ h2{
     flex-direction: column;
     align-items: center;
     height: 600px;
+    position: relative;
+
 }
+
 
 .illustration img{
     max-width: 100%;
     max-height: 100%;
 }
+
+.alternative-sub-section::after {
+    content: "";
+    background: url(images/saut.jpg);
+    opacity: 0.9;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    background-size: cover;
+    z-index: -1;   
+  }
 
 .project-card{
     width: 300px;
